# duo_log_sync

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  HISTORY.md  LICENSE  README.md  SECURITY.md  example_config.yml  install_service.bat  install_service.sh  pyproject.toml  pytest.ini  requirements-dev-3.10.txt  requirements-dev-3.11.txt  requirements-dev-3.12.txt  requirements-dev-3.13.txt  requirements-dev-3.6.txt  requirements-dev-3.8.txt  requirements-dev-3.9.txt  requirements-dev.in  requirements.in  requirements.txt  setup.py  template_config.yml  upgrade_config.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/pylint-annotate/: README.md  action.yml  package-lock.json  package.json  tsconfig.json
.github/actions/pylint-annotate/src/: index.ts
.github/actions/pytest-annotate/: README.md  action.yml  package-lock.json  package.json  tsconfig.json
.github/actions/pytest-annotate/src/: index.ts
.github/workflows/: _pytest.yml  ci.yml  release.yml
duologsync/: __version__.py  app.py  config.py  program.py  service.py  util.py  writer.py
duologsync/consumer/: activity_consumer.py  authlog_consumer.py  cef.py  consumer.py  telephony_consumer.py  trustmonitor_consumer.py
duologsync/producer/: activity_producer.py  authlog_producer.py  producer.py  telephony_producer.py  trustmonitor_producer.py
service/: com.duosecurity.duologsync.plist  duologsync.openrc  duologsync.service  duologsync.sysvinit  io.github.marktripod-duo.duologsync.plist
tests/: test_app.py  test_app_more.py  test_config.py  test_consumer_consume.py  test_consumer_format.py  test_get_log_offset.py  test_producer.py  test_producer_error_handling.py  test_producer_subclasses.py  test_program.py  test_service.py  test_util.py  test_util_helpers.py  test_writer_file_async.py  test_writer_more.py  test_writer_network.py  test_writer_rotation.py
tests/resources/config_files/: bad_values.yml  bad_yaml.yml  file_output.yml  file_output_missing_filepath.yml  no_defaults_set.yml  standard.yml
tests/test_consumer/: test_cef.py  test_subclasses.py
