[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "duologsync"
dynamic = ["version"]
description = "Ingest + sync logs from the Duo Admin API into another system."
readme = "README.md"
license = "MIT"
requires-python = ">=3.8"
authors = [
    { name = "Mark Tripod" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
]
dependencies = [
    "duo_client>=5.5.0,<6",
    "PyYAML>=6.0.1,<7",
    "jsonschema>=4.0,<5",
]

[project.optional-dependencies]
windows = ["pywin32>=306"]

[project.urls]
Homepage = "https://github.com/MarkTripod-Duo/duo_log_sync"
Repository = "https://github.com/MarkTripod-Duo/duo_log_sync"
Issues = "https://github.com/MarkTripod-Duo/duo_log_sync/issues"

[project.scripts]
duologsync = "duologsync.app:main"
duologsync-service = "duologsync.service:main"

[tool.hatch.build.targets.sdist]
include = [
    "duologsync/",
    "tests/",
    "service/",
    "install_service.sh",
    "install_service.bat",
    "LICENSE",
    "README.md",
]

[tool.hatch.version]
path = "duologsync/__version__.py"

[tool.hatch.build.targets.wheel]
packages = ["duologsync"]

[tool.pytest.ini_options]
addopts = [
    "--junit-xml=tests/TEST-duo_log_sync.xml",
    "--color=yes",
    "-vvv",
]

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.lint]
# Start from a pragmatic baseline: pyflakes (F) + pycodestyle (E,W). The
# ignores below mirror the tolerances carried over from the previous flake8
# config so the existing code lints clean; tighten over time.
select = ["E", "F", "W"]
ignore = [
    "E501",  # line length is handled by the formatter, not enforced hard
    "E203",  # whitespace before ':' (Black/formatter compatible)
    "E741",  # ambiguous variable names (pre-existing)
    "F401",  # unused imports (pre-existing tolerance)
    "F403",  # star imports (pre-existing tolerance)
    "F841",  # unused local variables (pre-existing tolerance)
]

[tool.coverage.run]
source = ["duologsync"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]

[dependency-groups]
dev = [
    "pytest>=7",
    "pytest-cov>=5",
    "ruff>=0.6",
]
